--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.2.47",
+    "vue-click-outside": "^1.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
