--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "vue": "^3.2.47",
-    "vue-click-outside": "^1.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
