add update data from iframe

--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,8 @@
         "*://*/*"
       ],
       "resources": [
-        "src/content-script/index.js"
+        "src/content-script/index.js",
+        "src/modal/colors.html"
       ]
     }
   ]
