--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,8 @@
       ],
       "resources": [
         "src/content-script/index.js",
-        "src/modal/colors.html"
+        "src/modal/colors.html",
+        "src/modal/index.css"
       ]
     }
   ]
