--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,7 @@
       "resources": [
         "src/content-script/index.js",
         "src/modal/colors.html",
+        "src/modal/colors.js",
         "src/modal/index.css"
       ]
     }
